--- a/features/main/layout/organisms/Header/atoms/BurgerButton/BurgerButton.css
+++ b/features/main/layout/organisms/Header/atoms/BurgerButton/BurgerButton.css
@@ -1,4 +1,5 @@
 .openButton {
+  display: block;
   padding: 0;
   font-size: 0;
   cursor: pointer;
